--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--script needed for tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- google fonts -->
+    <!-- cdn for google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
